--- a/index.html
+++ b/index.html
@@ -57,14 +57,10 @@
 			var calculation = bw - (OnePercentOfBodyWeight * newBF).toFixed(2);
 			console.log("calculation: " + calculation);
 			var calculationText = 0
-			
-			var ans = bw - calculation;
-			var newSum = ans/daysOut;
-			console.log(newSum);
 			var sum = ((bw - calculation) / daysOut).toFixed(2); // Set the number of decimal places to 2
 			console.log("sum: " + sum);
 			var calculationText = "";
-			document.getElementById("enter").innerHTML = "Your new weight goal is: " + calculation.toFixed(2) + " you need to lose " + sum + " lbs a day" + newSum;
+			document.getElementById("enter").innerHTML = "Your new weight goal is: " + calculation.toFixed(2) + " you need to lose " + sum + " lbs a day";
 			}
 		}
 </script>
