--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 </style>
 	<div id = "screen4">
-		<link rel="stylesheet" href="index.css">
+		<link rel="stylesheet" href="index.sass">
 		<h1><center>Find you Target BodyFat%</center></h1>
 		<p><center>Enter all of the fields to see how much weight you'll have to lose a day to get to your target bodyfat percentage</center></p>
 		
